--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,11 @@
     "type": "project",
     "require": {
         "php": "^7.2.5",
-        "laravel/lumen-framework": "^7.0",
+        "flipbox/lumen-generator": "^7.0",
         "guzzlehttp/guzzle": "^6.5",
         "laravel-notification-channels/africastalking": "^2.0",
         "laravel/helpers": "^1.2",
+        "laravel/lumen-framework": "^7.0",
         "laravel/tinker": "^2.0",
         "osenco/mpesa": "^1.20",
         "osenco/updater": "dev-master"
